[package]
name = "somnytoo"
version = "1.1.2"
authors = ["TvoiiSon tvoiison.dev@gmail.com"]
license = "AGPL-3.0-only"
description = "Binary protocol server for secure communications"
repository = "https://github.com/TvoiiSon/SomnyToo"
readme = "README.md"
keywords = ["server", "tcp", "binary", "protocol", "network"]
categories = ["network-programming", "command-line-utilities"]
edition = "2024"

[features]
default = []
metrics = []

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = { version = "0.10", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
x25519-dalek = "2"
hkdf = "0.12"
anyhow = "1.0"
dashmap = "7.0.0-rc2"
tracing = "0.1"
futures = "0.3"
constant_time_eq = "0.4"
digest = "0.10"
hex = "0.4"
prometheus = "0.14.0"
zeroize = "1.8.1"
thiserror = "2.0.16"
async-trait = "0.1.89"
once_cell = "1.21.3"
lru = "0.16.1"
regex = "1.0"
num_cpus = "1.0"
md5 = "0.7"
lazy_static = "1.5.0"
sys-info = "0.9"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
blake3 = "1.8"
crossbeam = "0.8"
rayon = "1.11"